--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- do I want to change this to a Bootstrap class like container-sm or container-lg for example to deal with viewport sizes? Or even container-fluid?-->
       
     <!-- STARTER Timeblocks go here -->
-    <!-- Temporary div container with row to check formatting of classes: what are time-block and hour?-->
+    <!-- Temporary div container with row to check formatting of classes: what are time-block and hour? I have assigned them as classes but can't see their effects so far -->
     <div class="container">
       <div class="row">
         <div class="col-2 hour">
