--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <header>
       <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p class="lead">A simple calendar app for scheduling your work day:</p>
       <p id="currentDay" class="lead"></p>
     </header>
 
@@ -51,9 +51,9 @@
             <tr>
               <td class="hour col-1">09:00</td>
               <td class="time-block">
-                <textarea class="col-10"></textarea>
+                <textarea class="col-10 past" id="textarea"></textarea>
               </td> 
-              <td><button class="saveBtn">
+              <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
               </button></td>
             </tr>
@@ -61,9 +61,9 @@
             <tr>
               <td class="hour col-1">10:00</td>
               <td class="time-block">
-                <textarea class="col-10"></textarea>
+                <textarea class="col-10" id="textarea"></textarea>
               </td> 
-              <td><button class="saveBtn">
+              <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
               </button></td>
             </tr>
@@ -71,9 +71,9 @@
             <tr>
               <td class="hour col-1">11:00</td>
               <td class="time-block">
-                <textarea class="col-10"></textarea>
+                <textarea class="col-10" id="textarea"></textarea>
               </td> 
-              <td><button class="saveBtn">
+              <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
               </button></td>
             </tr>
@@ -81,9 +81,9 @@
             <tr>
               <td class="hour col-1">12:00</td>
               <td class="time-block">
-                <textarea class="col-10"></textarea>
+                <textarea class="col-10" id="textarea"></textarea>
               </td> 
-              <td><button class="saveBtn">
+              <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
               </button></td>
             </tr>
@@ -91,9 +91,9 @@
             <tr>
               <td class="hour col-1">13:00</td>
               <td class="time-block">
-                <textarea class="col-10"></textarea>
+                <textarea class="col-10" id="textarea"></textarea>
               </td> 
-              <td><button class="saveBtn">
+              <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
               </button></td>
             </tr>
@@ -101,9 +101,9 @@
             <tr>
               <td class="hour col-1">14:00</td>
               <td class="time-block">
-                <textarea class="col-10"></textarea>
+                <textarea class="col-10" id="textarea"></textarea>
               </td> 
-              <td><button class="saveBtn">
+              <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
               </button></td>
             </tr>
@@ -111,9 +111,9 @@
             <tr>
               <td class="hour col-1">15:00</td>
               <td class="time-block">
-                <textarea class="col-10"></textarea>
+                <textarea class="col-10" id="textarea"></textarea>
               </td> 
-              <td><button class="saveBtn">
+              <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
               </button></td>
             </tr>
@@ -121,9 +121,9 @@
             <tr>
               <td class="hour col-1">16:00</td>
               <td class="time-block">
-                <textarea class="col-10"></textarea>
+                <textarea class="col-10" id="textarea"></textarea>
               </td> 
-              <td><button class="saveBtn">
+              <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
               </button></td>
             </tr>
@@ -131,9 +131,9 @@
             <tr>
               <td class="hour col-1">17:00</td>
               <td class="time-block">
-                <textarea class="col-10"></textarea>
+                <textarea class="col-10" id="textarea"></textarea>
               </td> 
-              <td><button class="saveBtn">
+              <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
               </button></td>
             </tr>
