--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <tr>
               <td class="hour col-1">09:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea"></textarea>
+                <textarea class="col-10" id="textarea1"></textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
@@ -61,7 +61,7 @@
             <tr>
               <td class="hour col-1">10:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea"></textarea>
+                <textarea class="col-10" id="textarea2"></textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
@@ -71,7 +71,7 @@
             <tr>
               <td class="hour col-1">11:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea"></textarea>
+                <textarea class="col-10" id="textarea3"></textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
@@ -81,7 +81,7 @@
             <tr>
               <td class="hour col-1">12:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea"></textarea>
+                <textarea class="col-10" id="textarea4"></textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
@@ -91,7 +91,7 @@
             <tr>
               <td class="hour col-1">13:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea"></textarea>
+                <textarea class="col-10" id="textarea5"></textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
@@ -101,7 +101,7 @@
             <tr>
               <td class="hour col-1">14:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea"></textarea>
+                <textarea class="col-10" id="textarea6"></textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
@@ -111,7 +111,7 @@
             <tr>
               <td class="hour col-1">15:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea"></textarea>
+                <textarea class="col-10" id="textarea7"></textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
@@ -121,7 +121,7 @@
             <tr>
               <td class="hour col-1">16:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea"></textarea>
+                <textarea class="col-10" id="textarea8"></textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
@@ -131,7 +131,7 @@
             <tr>
               <td class="hour col-1">17:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea"></textarea>
+                <textarea class="col-10" id="textarea9"></textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
