DOM traversal and parent elements code

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <tr>
               <td class="hour col-1">09:00</td>
               <td class="time-block">
-                <textarea class="col-10" id="textarea1"></textarea>
+                <textarea class="col-10" id="textarea1">Spegeti</textarea>
               </td> 
               <td><button class="btn saveBtn">
                 <span class="fa fa-floppy-o" aria-hidden="true"></span>
